2009-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : more [MC-NMF] implementation. Moved
	  sending/receiving SizedMessageRecord parts to manager class.
	  Handle writer session, though it is likely broken at dictionary
	  writer part (no string is written so far).
	* BinaryMessageEncoder.cs : add writer session and rename reader
	  session.

2009-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : more [MC-NMF] implementation. Via uri
	  is mandatory in initiator preamble packet. Handle Fault reply in
	  initiator preamble.

2009-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : ongoing refactoring to collect [MC-NMF]
	  based communication under TcpBinaryFrameManager class.

2009-05-13  Jb Evain  <jbevain@novell.com>

	* MessageHeader.cs: use a SL friendly way of creating an XmlReader
	from a StringReader.

2009-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageImpl.cs, MessageHeader.cs : eliminate xlinq in 2.1, and
	  actually eliminate DOM-based implementation too in 2.0.

2009-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : implement in-band dictionary support
	  in [MC-NMF] and [MC-NBFSE], used in duplex channels. Added some
	  comments for magic numbers based on [MC-NMF].

2009-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncoder.cs : implement part of in-band dictionary
	  support for [MC-NBFSE] record in [MC-NMF], in this class.

2009-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncodingBindingElement.cs : clear extra public members.

2009-04-27  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : implemented some channel methods.

2009-04-27  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncoder.cs : use XmlDictionary specified as [MC-NBFS].

2009-04-27  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelManagerBase.cs : implement Open/CloseTimeout correctly.
